--- a/.github/workflows/hourlyOumaima.yml
+++ b/.github/workflows/hourlyOumaima.yml
@@ -25,7 +25,7 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Run scraper
-        run: python scraper_ouamaima.py
+        run: python oumaima-scrap.py
 
       - name: Commit & push CSV
         uses: stefanzweifel/git-auto-commit-action@v5
