--- a/.github/workflows/hourlySarra.yml
+++ b/.github/workflows/hourlySarra.yml
@@ -25,7 +25,7 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Run scraper
-        run: python scraper.py
+        run: python sarraScrap.py
 
       - name: Commit & push CSV
         uses: stefanzweifel/git-auto-commit-action@v5
